--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/alex-soto/chatcat-exercise#readme",
   "dependencies": {
-    "connect-mongo": "1.3.2",
+    "connect-mongo": "^1.3.2",
     "ejs": "2.3.4",
     "express": "^4.13.3",
     "express-session": "1.12.1",
-    "mongoose": "4.3.1",
+    "mongoose": "^4.3.1",
     "passport": "^0.3.2",
     "passport-facebook": "2.0.0",
     "passport-twitter": "^1.0.3",
